Fixes and updates
Updating libs.
Adding in a scroll draw lock and range check so we don't get massive lines. Which looks weird and is annoying.
Fixing mobile slide video sizing.
Also some off code which I probably did half asleep :confounded:

--- a/src/scss/components/slides.scss
+++ b/src/scss/components/slides.scss
@@ -35,15 +35,20 @@
         overflow: hidden;
 
         video {
-            position: absolute; 
-            right: 0; 
-            bottom: 0;
             min-width: 100%; 
             min-height: 100%;
-            width: auto; 
-            height: auto; 
+            width: auto;
+            height: auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
             background-size: cover;
             overflow: hidden;
+
+            @media only screen and (max-width: 1024px) {
+                height: 100%;
+            }
         }
     }
 
